Add plain table

--- a/question-three-one.html
+++ b/question-three-one.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body >
-
+    <h4>Pearson Institue of Higher Education (ITEC301) Timetable</h2>
+        <table border="1px solid black">
+            <tr>
+                <th>Group</th>
+                <th>Time</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+            </tr>
+            <tr>
+                <td>Group A</td>
+                <td>12 - 2PM</td>
+                <td>Attend lectures</td>
+                <td>Free</td>
+                <td>Code challenge</td>
+                <td>Free</td>
+                <td>Free</td>
+            </tr>
+            <tr>
+                <td>Group B</td>
+                <td>8 - 10AM</td>
+                <td>Free</td>
+                <td>Attend leactures</td>
+                <td>Free</td>
+                <td>Code challenge</td>
+                <td>Free</td>
+            </tr> 
+        </table>
 </body>
 </html>
