--- a/question-three.html
+++ b/question-three.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            font-family: Calibri;
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        h4 {
+            margin-left: 130px;
+        }
+
+        table,
+        th,
+        td {
+            margin: 5px;
+            padding: 5px;
+            border: 1px solid black;
+        }
+
+        /* Source: https://www.w3schools.com/Css/css_table.asp */
+    </style>
 </head>
-<body >
-    <h4>Pearson Institue of Higher Education (ITEC301) Timetable</h2>
-        <table border="1px solid black">
+
+<body>
+    <h4 style="margin-left: 130px;">Pearson Institue of Higher Education (ITEC301) Timetable</h2>
+        <table>
             <tr>
                 <th>Group</th>
                 <th>Time</th>
@@ -34,7 +59,8 @@
                 <td>Free</td>
                 <td>Code challenge</td>
                 <td>Free</td>
-            </tr> 
+            </tr>
         </table>
 </body>
+
 </html>
